Fix unresponsiveness video size on mobile

--- a/frontend/src/components/blocks/ImageCards/less/video-carousel.less
+++ b/frontend/src/components/blocks/ImageCards/less/video-carousel.less
@@ -43,7 +43,7 @@
                 aspect-ratio: 16/9;
                 width: 100vw;
               }
-              
+
 
               .video-responsive {
                 position: absolute;
@@ -57,6 +57,10 @@
                 @media only screen and (max-width: @largestMobileScreen) {
                   height: unset;
                   width: 100vw;
+                  .videoCarousel{
+                    width: 100% !important;
+                    height: 100% !important;
+                  }
                 }
 
                 // .ui.button {
